--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>OPUS - Cathédrale Notre Dame d'Amiens</title>
         <link type="text/css" rel= stylesheet href="./css/main.css">
         <link href='https://fonts.googleapis.com/css?family=Raleway:300,300italic,100italic,100' rel='stylesheet' type='text/css'>
-        <script></script>
+        <script type="text/javascript" src= "js/three.min.js"></script>
     </head>
     <body>
         <section>
@@ -27,5 +27,6 @@
             <a class="mute" href="#"><img src="data/img/mute.png"></a>
             <a class="fullScreen" href="#"><img src="data/img/fullScreen.png"></a>
         </section>
+        <script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
