--- a/index.html
+++ b/index.html
@@ -13,42 +13,62 @@
         <div class="logoMenu">
             <a href="index.html"><img src="data/img/logoMenu.png"></a>
         </div>
-        <div class="centralInfo">
+        <div id="centralInfo">
             <h3>Bienvenue à la</h3> <br/>
             <h1><mark>C</mark>athédrale <br/>
                 <mark>N</mark>otre <mark>D</mark>ame <br/>
                 d'<mark>A</mark>miens</h1>
         </div>
+		<div id="projetPage">
+			<h1><mark>L</mark>e <mark>P</mark>rojet </h1>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sed hendrerit ante. Curabitur consequat, justo et vulputate pellentesque, ex mi ornare nibh, id imperdiet mauris mauris vel enim. In in leo purus. Duis rutrum vulputate odio, et posuere mi dapibus sollicitudin. Donec ornare lacinia tincidunt. Suspendisse accumsan, justo id vehicula consectetur, sem risus egestas mauris, quis aliquam tortor purus aliquet velit. Nam commodo sem at leo euismod, finibus commodo justo iaculis. Quisque mollis, eros sit amet rhoncus tempor, magna libero volutpat est, eget mollis dolor eros a tortor. Curabitur eu felis sit amet mi facilisis eleifend. Phasellus ultrices ultrices dolor ac faucibus. Suspendisse nisi est, eleifend eu aliquet id, laoreet sit amet orci. Sed blandit orci nec purus consectetur accumsan.<br/>
+
+			Pellentesque sagittis, purus vel lacinia molestie, augue augue facilisis erat, sed pharetra risus nulla volutpat leo. Quisque at mauris in metus fermentum mollis at in quam. Donec elementum sodales ante sit amet pretium. Donec ullamcorper tincidunt sapien, quis rutrum velit accumsan sit amet. Vestibulum nunc dui, finibus non feugiat at, hendrerit eget enim. Integer urna ipsum, sagittis ut leo eget, ornare ullamcorper ex. Donec ut risus quis ex porta sodales ut eget felis. Suspendisse quis tincidunt est. In ornare augue vel nisl ornare, eu lacinia dui pellentesque.<br/>
+
+			Aenean et lacinia erat. Donec non eros elementum lacus accumsan condimentum. Maecenas condimentum, nibh ac scelerisque vulputate, nibh massa feugiat erat, in luctus nibh diam in leo. Sed non tempus purus, sed dignissim arcu. Sed sollicitudin, velit vitae lobortis ornare, lectus nunc imperdiet tellus, congue condimentum est felis vehicula dolor. Nullam rhoncus fermentum leo vel ullamcorper. Nullam placerat enim eu massa lacinia varius. Phasellus vel luctus felis. In eu ipsum et urna eleifend pretium sit amet ut massa. Praesent faucibus gravida dolor, quis mattis felis congue non. Aliquam libero turpis, malesuada ac nibh euismod, consequat eleifend orci. Ut maximus blandit nulla, vel euismod est tincidunt sed. Nulla at lacinia arcu. Fusce a viverra ligula, eget malesuada libero. Nulla quis tempor magna. Nam eget ex in purus venenatis dignissim.</p>
+		</div>
 		<div id ="menu">
-			<button id="infosDeploy">
-				<img src="data/img/picto/infos.png"><img>
-			</button>
-			<ul id = "infosMenu">
+			<div id="infosMenu">
+				<button id="infosDeploy">
+					<img src="data/img/picto/infos.png"><img>
+				</button>
+				<ul id = "infosList">
+					<li>
+						<button id="partenaires">
+							<img src="data/img/picto/partenaires.png"><img>
+						</button>
+						
+					</li>
+					<li>
+						<hr width="10px">
+						<button id="equipe">
+							<img src="data/img/picto/equipe.png"><img>
+						</button>
+						
+					</li>
+					<li>
+						<hr width="10px">
+						<button id="projet">
+							<img src="data/img/picto/projet.png"><img>
+						</button>
+					</li>
+				</ul>
+			</div>
+			<button id="startButton">COMMENCEZ LA VISITE</button>
+			<ul id = "controls">
 				<li>
-					<button id="projet">
-						<img src="data/img/picto/projet.png"><img>
+					<p>Mute</p>
+					<button id="mute">
+						<img src="data/img/picto/mute.png"><img>
 					</button>
 				</li>
 				<li>
-					<button id="equipe">
-						<img src="data/img/picto/equipe.png"><img>
-					</button>
-				</li>
-				<li>
-					<button id="partenaires">
-						<img src="data/img/picto/partenaires.png"><img>
+					<p>Full Screen</p>
+					<button id="fullScreen">
+						<img src="data/img/picto/fullScreen.png"><img>
 					</button>
 				</li>
 			</ul>
-			<button id="startButton">COMMENCEZ LA VISITE</button>
-			<div id = "controls">
-				<button id="fullScreen">
-					<img src="data/img/picto/fullScreen.png"><img>
-				</button>
-				<button id="mute">
-					<img src="data/img/picto/mute.png"><img>
-				</button>
-			</div>
 		</div>
         <script type="text/javascript" src="js/main.js"></script>
     </body>
