Fixing Menu, implementing sound and new model

--- a/index.html
+++ b/index.html
@@ -113,26 +113,24 @@
 				</button>
 			</div>
 			<button id="startButton">COMMENCEZ LA VISITE</button>
-			<ul id = "controls">
-				<li id="mute">
-					<p>Mute</p>
-				</li>
-				<li id="mutePict">
-					<button>
+			<div id = "controls">
+				<ul id= "mute">
+					<li>
+						<p>Mute</p>
+					</li>
+					<li>
 						<img src="data/img/picto/mute.png">
-					</button>
-				</li>
-				<li><hr height="30px"></li>
-				<li id="fullscreen">
-					<p>Fullscreen</p>
-				</li>
-				<li id="fullScreenPict">
-					<button>
+					</li>
+				</ul>
+				<ul id = "fullScreen">
+					<li>
+						<p>Full Screen</p>
+					</li>
+					<li>
 						<img src="data/img/picto/fullScreen.png">
-					</button>
-				</li>
-			</ul>
-		</div>
+					</li>
+				</ul>
+			</div>
         <script type="text/javascript" src="js/main.js"></script>
 		<script type="text/javascript" src="js/webGL.js"></script>
     </body>
