Vid+cursor+plan+svg

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
 		<div id="webGL-container"></div>
 		<div id="background"></div>
-        <div class="logoMenu">
+        <div id="logoMenu">
             <a href="index.html"><img src="data/img/logoMenu.png"></a>
         </div>
         <div id="centralInfo">
@@ -133,8 +133,42 @@
 				</ul>
 			</div>
 		</div>
-		<div id ="lateralInfosR">
+		<div id ="leftPanel">
+			<h1><mark>T</mark>his is a <mark>C</mark>ube</h1>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas cursus lacinia nisl, non tincidunt metus elementum imperdiet. Duis a efficitur enim. Donec vitae metus tellus. Mauris vel quam magna. Mauris quis elementum nisl, ac eleifend ex. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Quisque at mauris vitae lectus mollis aliquam. Vivamus gravida neque id massa tristique porta. Proin efficitur metus mi, quis blandit nulla interdum id. Quisque felis mi, rutrum eu rhoncus in, mollis vitae nisl. Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br/> Sed ultrices, dui id hendrerit placerat, nisl diam pellentesque enim, id accumsan nisi ex scelerisque nibh. Nunc egestas nunc non euismod volutpat. Vestibulum ac luctus augue. Vestibulum sollicitudin eleifend turpis id tempor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nullam finibus, sem id maximus eleifend, tellus ipsum rutrum justo, ornare lobortis mauris erat eu justo. Suspendisse commodo porttitor mollis. Vivamus mollis fringilla quam sit amet tincidunt. Mauris leo ipsum, pellentesque ut vestibulum non, interdum id sem.<br/>Vestibulum volutpat sed neque in ultricies. Nullam blandit quis ipsum sed ullamcorper. Sed dignissim aliquam sem, at bibendum velit mattis et. Aenean pharetra accumsan tempor. Ut massa augue, tincidunt sit amet tincidunt nec, varius sed nulla. In porta felis quis tortor laoreet, at rutrum erat consequat. Quisque molestie tortor a libero dapibus, sit amet consequat enim sollicitudin. Ut justo nibh, commodo sed orci eu, mattis dapibus lacus.</p>
+		</div>
+		<div id="plan">
+			<img src="data/img/plan.png">
+			<svg xmlns="http://www.w3.org/2000/svg"
+     			width="10.3139in" height="4.20892in"
+     			viewBox="0 0 990 404">
+			  <path id="Sans nom"
+					fill="none" stroke="white" stroke-width="2"
+					d="M 217.00,213.00
+					   C 217.00,213.00 221.00,178.00 269.00,176.00
+						 319.00,176.00 385.00,151.00 438.00,150.00
+						 491.00,149.00 457.00,99.00 485.00,81.00
+						 513.00,63.00 565.00,61.00 574.00,80.00
+						 583.00,99.00 525.00,151.00 523.00,195.00
+						 521.00,239.00 575.00,203.00 578.00,233.00
+						 581.00,263.00 604.00,347.00 558.00,345.00
+						 512.00,343.00 467.00,369.00 461.00,339.00
+						 455.00,309.00 504.00,254.00 474.00,243.00
+						 444.00,232.00 239.00,288.00 228.00,259.00
+						 217.00,230.00 372.00,196.00 402.00,205.00
+						 432.00,214.00 579.00,269.00 641.00,274.00
+						 703.00,279.00 791.00,275.00 800.00,228.00
+						 809.00,181.00 812.00,165.00 762.00,152.00
+						 712.00,139.00 610.00,133.00 571.00,152.00
+						 532.00,171.00 553.00,199.00 607.00,206.00
+						 661.00,213.00 730.00,206.00 730.00,206.00" />
+			</svg>
+		</div>
+		<div id="trailer">
+			<video src="data/vid/trailer.mp4" type="video/mp4" id="trailerVid" autoplay>
+				Your browser does not support the video tag.
+			</video>
+			<button id="skipTrailer">SKIP TRAILER</button>
 		</div>
         <script type="text/javascript" src="js/main.js"></script>
 		<script type="text/javascript" src="js/webGL.js"></script>
