Impossible to got different

--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
 			<h1><mark>C</mark>athédrale <br/>
 				<mark>N</mark>otre <mark>D</mark>ame <br/>
 				d'<mark>A</mark>miens</h1>
+			<h4>Il y a plus de 800 ans la construction<br/> 
+				de la plus grande cathédrale de France commence.<br/> 
+				Pénétrez avec nous dans ce monument gothique <br/>
+				et découvrez les secrets de son élévation.</h4>
 		</div>
 		<div id="projetInfos" class= 'accueil'>
 			<h1><mark>L</mark>e <mark>P</mark>rojet </h1>
@@ -141,7 +145,7 @@
 				</li>
 			</ul>
 		</div>
-		<button id="startButton" class= 'accueil'>COMMENCEZ LA VISITE</button>
+		<button id="startButton" class= 'accueil'>DÉCOUVRIR</button>
 		<button id="watchTheTrailer" class= 'accueil'>Regarder le trailer</button>
 		<ul id= "planControls" class='basicInterface'>
 			<li>
@@ -178,7 +182,55 @@
 				width="10.3139in" height="4.20892in"
 				viewBox="0 0 990 404">
 			  <path
-					fill="none" stroke="white" stroke-width="2" stroke-dasharray="988.00 988.00" stroke-dashoffset="988.00" id="visit"
+					fill="none" stroke="white" stroke-width="1" stroke-dasharray="988.00 988.00" stroke-dashoffset="988.00" id="visit"
+					d="M 217.00,213.00
+					   C 217.00,213.00 221.00,178.00 269.00,176.00
+						 319.00,176.00 385.00,151.00 438.00,150.00
+						 491.00,149.00 457.00,99.00 485.00,81.00
+						 513.00,63.00 565.00,61.00 574.00,80.00
+						 583.00,99.00 525.00,151.00 523.00,195.00
+						 521.00,239.00 575.00,203.00 578.00,233.00
+						 581.00,263.00 604.00,347.00 558.00,345.00
+						 512.00,343.00 467.00,369.00 461.00,339.00
+						 455.00,309.00 504.00,254.00 474.00,243.00
+						 444.00,232.00 239.00,288.00 228.00,259.00
+						 217.00,230.00 372.00,196.00 402.00,205.00
+						 432.00,214.00 579.00,269.00 641.00,274.00
+						 703.00,279.00 791.00,275.00 800.00,228.00
+						 809.00,181.00 812.00,165.00 762.00,152.00
+						 712.00,139.00 610.00,133.00 571.00,152.00
+						 532.00,171.00 553.00,199.00 607.00,206.00
+						 661.00,213.00 730.00,206.00 730.00,206.00" />
+			</svg>
+		</div>
+		<div id="planMini" class= 'interface3D'>
+			<svg xmlns="http://www.w3.org/2000/svg"
+				width="10.3139in" height="4.20892in"
+				viewBox="0 0 990 404" id="planMiniBG">
+				<path
+					fill="none" stroke="white" stroke-width="3"
+					d="M 609.00,53.00
+					   C 609.00,53.00 609.00,132.00 609.00,132.00
+						 609.00,132.00 733.00,132.00 733.00,132.00
+						 761.42,132.00 784.20,128.94 809.00,146.44
+						 852.22,176.93 853.10,242.22 811.00,274.10
+						 797.73,284.15 780.66,289.98 764.00,290.00
+						 764.00,290.00 746.00,289.00 746.00,289.00
+						 746.00,289.00 609.00,289.00 609.00,289.00
+						 609.00,289.00 609.00,371.00 609.00,371.00
+						 609.00,371.00 449.00,371.00 449.00,371.00
+						 449.00,371.00 449.00,289.00 449.00,289.00
+						 449.00,289.00 190.00,289.00 190.00,289.00
+						 190.00,289.00 190.00,132.00 190.00,132.00
+						 190.00,132.00 449.00,132.00 449.00,132.00
+						 449.00,132.00 449.00,53.00 449.00,53.00
+						 449.00,53.00 609.00,53.00 609.00,53.00 Z" />
+			</svg>
+			<svg xmlns="http://www.w3.org/2000/svg"
+				width="10.3139in" height="4.20892in"
+				viewBox="0 0 990 404" id="planMiniVisit">
+			  <path
+					fill="none" stroke="white" stroke-width="3"
 					d="M 217.00,213.00
 					   C 217.00,213.00 221.00,178.00 269.00,176.00
 						 319.00,176.00 385.00,151.00 438.00,150.00
