Hover on cube with JSON file
Start Implementing Fly Control

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 		<script type="text/javascript" src= "js/ColladaLoader.js"></script>
 		<script type="text/javascript" src= "js/dat.gui.min.js"></script>
 		<script type="text/javascript" src= "js/stats.min.js"></script>
-		<script type="text/javascript" src= "js/OrbitControls.js"></script>
+		<!--<script type="text/javascript" src= "js/OrbitControls.js"></script>-->
+		<script type="text/javascript" src= "js/FlyControls.js"></script>
 		<script type="text/javascript" src= "js/threex.domevents.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     </head>
@@ -252,9 +253,8 @@
 			</svg>
 		</div>
 		<div id ="leftPanel" class= 'interface3D'>
-				<h1><mark>T</mark>his is a <mark>C</mark>ube</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas cursus lacinia nisl, non tincidunt metus elementum imperdiet. Duis a efficitur enim. Donec vitae metus tellus. Mauris vel quam magna. Mauris quis elementum nisl, ac eleifend ex. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Quisque at mauris vitae lectus mollis aliquam. Vivamus gravida neque id massa tristique porta. Proin efficitur metus mi, quis blandit nulla interdum id. Quisque felis mi, rutrum eu rhoncus in, mollis vitae nisl. Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br/> Sed ultrices, dui id hendrerit placerat, nisl diam pellentesque enim, id accumsan nisi ex scelerisque nibh. Nunc egestas nunc non euismod volutpat. Vestibulum ac luctus augue. Vestibulum sollicitudin eleifend turpis id tempor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nullam finibus, sem id maximus eleifend, tellus ipsum rutrum justo, ornare lobortis mauris erat eu justo. Suspendisse commodo porttitor mollis. Vivamus mollis fringilla quam sit amet tincidunt. Mauris leo ipsum, pellentesque ut vestibulum non, interdum id sem.<br/>Vestibulum volutpat sed neque in ultricies. Nullam blandit quis ipsum sed ullamcorper. Sed dignissim aliquam sem, at bibendum velit mattis et. Aenean pharetra accumsan tempor. Ut massa augue, tincidunt sit amet tincidunt nec, varius sed nulla. In porta felis quis tortor laoreet, at rutrum erat consequat. Quisque molestie tortor a libero dapibus, sit amet consequat enim sollicitudin. Ut justo nibh, commodo sed orci eu, mattis dapibus lacus.</p>
-			</div>
+			<!-- Javascript is creating title and description of the hover interest point here -->
+		</div>
        	<script type="text/javascript" src="js/main.js"></script>
 		<script type="text/javascript" src="js/webGL.js"></script>
     </body>
