--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 		<script type="text/javascript" src= "js/ColladaLoader.js"></script>
 		<script type="text/javascript" src= "js/dat.gui.min.js"></script>
 		<script type="text/javascript" src= "js/stats.min.js"></script>
-		<!--<script type="text/javascript" src= "js/OrbitControls.js"></script>-->
+		<script type="text/javascript" src= "js/OrbitControls.js"></script>
 		<script type="text/javascript" src= "js/FlyControls.js"></script>
 		<script type="text/javascript" src= "js/threex.domevents.js"></script>
+		<script type="text/javascript" src= "js/FirstPersonControls.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     </head>
     <body>
