--- a/index.html
+++ b/index.html
@@ -4,15 +4,13 @@
         <title>OPUS - Cathédrale Notre Dame d'Amiens</title>
         <link type="text/css" rel= stylesheet href="./css/main.css">
         <link href='https://fonts.googleapis.com/css?family=Raleway:300,300italic,100italic,100' rel='stylesheet' type='text/css'>
+		
         <script type="text/javascript" src= "js/three.min.js"></script>
 		<script type="text/javascript" src= "js/ColladaLoader.js"></script>
-		<script type="text/javascript" src= "js/dat.gui.min.js"></script>
 		<script type="text/javascript" src= "js/stats.min.js"></script>
-		<script type="text/javascript" src= "js/OrbitControls.js"></script>
 		<script type="text/javascript" src= "js/FlyControls.js"></script>
+		<script type="text/javascript" src= "js/TrackballControls.js"></script>
 		<script type="text/javascript" src= "js/threex.domevents.js"></script>
-		<script type="text/javascript" src= "js/FirstPersonControls.js"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     </head>
     <body>
 		<div id="webGL-container"></div>
@@ -149,6 +147,14 @@
 		</div>
 		<button id="startButton" class= 'accueil'>DÉCOUVRIR</button>
 		<button id="watchTheTrailer" class= 'accueil'>Regarder le trailer</button>
+		<ul id= "visitModeControl" class='basicInterface'>
+			<li>
+				<img src="data/img/picto/mute.png">
+			</li>
+			<li>
+				<p>Changer de mode de visite</p>
+			</li>
+		</ul>
 		<ul id= "planControls" class='basicInterface'>
 			<li>
 				<img src="data/img/picto/mute.png">
@@ -256,7 +262,7 @@
 		<div id ="leftPanel" class= 'interface3D'>
 			<!-- Javascript is creating title and description of the hover interest point here -->
 		</div>
-       	<script type="text/javascript" src="js/main.js"></script>
 		<script type="text/javascript" src="js/webGL.js"></script>
+       	<script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
