hoverList and informations about project

--- a/index.html
+++ b/index.html
@@ -107,7 +107,6 @@
 		<!-------------------------------------------------------------------------->
 		<!---------------------- Informations containers --------------------------->
 		<!-------------------------------------------------------------------------->
-		
 		<div id="title" class='openningInterface'>
 			<h3>Bienvenue à la</h3> <br/>
 			<h1><mark>C</mark>athédrale <br/>
@@ -120,71 +119,121 @@
 		</div>
 		<div id="projetInfos" class='openningInterface'>
 			<h1><mark>L</mark>e <mark>P</mark>rojet </h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sed hendrerit ante. Curabitur consequat, justo et vulputate pellentesque, ex mi ornare nibh, id imperdiet mauris mauris vel enim. In in leo purus. Duis rutrum vulputate odio, et posuere mi dapibus sollicitudin. Donec ornare lacinia tincidunt. Suspendisse accumsan, justo id vehicula consectetur, sem risus egestas mauris, quis aliquam tortor purus aliquet velit. Nam commodo sem at leo euismod, finibus commodo justo iaculis. Quisque mollis, eros sit amet rhoncus tempor, magna libero volutpat est, eget mollis dolor eros a tortor. Curabitur eu felis sit amet mi facilisis eleifend. Phasellus ultrices ultrices dolor ac faucibus. Suspendisse nisi est, eleifend eu aliquet id, laoreet sit amet orci. Sed blandit orci nec purus consectetur accumsan.<br/><br/>
+			<div id="projetToBeScroll">
+				<p>E-Cathédrale est un programme de recherches et de développements sur la réalisation et l'exploitation d'une maquette numérique de la cathédrale d'Amiens. Cette maquette se veut très précise, réaliste et complète, aussi bien de  l'intérieur que de l'extérieur.<br/><br/>
 
-			Pellentesque sagittis, purus vel lacinia molestie, augue augue facilisis erat, sed pharetra risus nulla volutpat leo. Quisque at mauris in metus fermentum mollis at in quam. Donec elementum sodales ante sit amet pretium. Donec ullamcorper tincidunt sapien, quis rutrum velit accumsan sit amet. Vestibulum nunc dui, finibus non feugiat at, hendrerit eget enim. Integer urna ipsum, sagittis ut leo eget, ornare ullamcorper ex. Donec ut risus quis ex porta sodales ut eget felis. Suspendisse quis tincidunt est. In ornare augue vel nisl ornare, eu lacinia dui pellentesque.<br/><br/>
-
-			Aenean et lacinia erat. Donec non eros elementum lacus accumsan condimentum. Maecenas condimentum, nibh ac scelerisque vulputate, nibh massa feugiat erat, in luctus nibh diam in leo. Sed non tempus purus, sed dignissim arcu. Sed sollicitudin, velit vitae lobortis ornare, lectus nunc imperdiet tellus, congue condimentum est felis vehicula dolor. Nullam rhoncus fermentum leo vel ullamcorper. Nullam placerat enim eu massa lacinia varius. Phasellus vel luctus felis. In eu ipsum et urna eleifend pretium sit amet ut massa. Praesent faucibus gravida dolor, quis mattis felis congue non. Aliquam libero turpis, malesuada ac nibh euismod, consequat eleifend orci. Ut maximus blandit nulla, vel euismod est tincidunt sed. Nulla at lacinia arcu. Fusce a viverra ligula, eget malesuada libero. Nulla quis tempor magna. Nam eget ex in purus venenatis dignissim.</p>
+				Le contexte dans lequel a émergé le programme E-Cathédrale se caractérise par :<br/><br/>
+				<ul>
+					<li>la volonté des pouvoirs publics en faveur de l’E-Heritage</li>
+					<li>la démocratisation du numérique</li>
+					<li>l'amélioration de l’accès à la culture</li>
+					<li>la volonté de sensibiliser pour une meilleure connaissance du patrimoine culturel</li>
+				</ul>
+				<br/>
+				Les objectifs du programme se déclinent sous forme de deux axes :<br/><br/>
+				<ul>
+					<li>Représentation numérique complète et fidèle de la cathédrale d’Amiens, aussi bien de l’intérieur que de l’extérieurModèle (modèle 3D voire 4D, annotations, ...)</li>
+					<li>Exploitation et nouvelles interfaces</li>
+				</ul><br/>
+				Les finalités se situent à plusieurs niveaux :<br/><br/>
+				<ul>
+					<li>Scientifique</li>
+					<ul>
+						<li>Reconstruction 3D précise et grande échelle</li>
+						<li>Surveillance de l’évolution du monument</li>
+						<li>Calcul de structures</li>
+						<li>Analyse automatique des motifs pour les études en art, histoire</li>
+					</ul>
+					<li>Sociétal</li>
+					<ul>
+						<li>Archivage et sauvegarde du patrimoine</li>
+						<li>Personnes empêchées</li>
+					</ul>
+					<li>Culturel</li>
+					<ul>
+						<li>Facilitation de l’accès à la culture par le numérique</li>
+						<li>Approche ludique et attractive de la culture</li>
+						<li>Meilleure accessibilité</li>
+					</ul>
+				</ul>
+				</p>
+			</div>
 		</div>
 		<div id="equipeInfos" class='openningInterface'>
-			<h1><mark>N</mark>otre <mark>É</mark>quipe </h1>
-			<ul id="equipeList">
-				<li class="equipeListElement">
-					<img src="data/img/portrait/mouaddib.png">
-					<h3>El Mustafa Mouaddib</h3>
-					<p>Aenean et lacinia erat. Donec non eros elementum lacus accumsan condimentum. Maecenas condimentum, nibh ac scelerisque vulputate, nibh massa feugiat erat, in luctus nibh diam in leo. Sed non tempus purus, sed dignissim arcu.</p>
-				</li>
-				<li class="equipeListElement">
-					<img src="data/img/portrait/mouaddib.png">
-					<h3>El Mustafa Mouaddib</h3>
-					<p>Ut maximus blandit nulla, vel euismod est tincidunt sed. Nulla at lacinia arcu. Fusce a viverra ligula, eget malesuada libero. Nulla quis tempor magna. Nam eget ex in purus venenatis dignissim.</p>
-				</li>
-				<li class="equipeListElement">
-					<img src="data/img/portrait/mouaddib.png">
-					<h3>El Mustafa Mouaddib</h3>
-					<p>Ut maximus blandit nulla, vel euismod est tincidunt sed. Nulla at lacinia arcu. Fusce a viverra ligula, eget malesuada libero. Nulla quis tempor magna. Nam eget ex in purus venenatis dignissim.</p>
-				</li>
-				<li class="equipeListElement">
-					<img src="data/img/portrait/mouaddib.png">
-					<h3>El Mustafa Mouaddib</h3>
-					<p>Ut maximus blandit nulla, vel euismod est tincidunt sed. Nulla at lacinia arcu. Fusce a viverra ligula, eget malesuada libero. Nulla quis tempor magna. Nam eget ex in purus venenatis dignissim.</p>
-				</li>
-			</ul>
+			<h1><mark>N</mark>ous <mark>C</mark>ontacter </h1>
+			<p>
+				Site web dédié à la cathédrale d'Amiens développé par l'UPJV : <br/>
+				<a href="http://www.u-picardie.fr/Cathedrale/visite.html">http://www.u-picardie.fr/Cathedrale/visite.html</a><br/><br/>
+
+				Amiens Métropole :<br/>
+				<a href="http://www.amiens-cathedrale.fr/home.html">http://www.amiens-cathedrale.fr/home.html</a><br/><br/>
+
+				Site Centre des Monuments Nationaux :<br/>
+				<a href="http://cathedrale-amiens.monuments-nationaux.fr/">http://cathedrale-amiens.monuments-nationaux.fr/</a><br/><br/>
+				
+				Site Pascal Lando :<br/>
+				<a href="http://www.cathedrale-amiens.images-en-somme.fr/">http://www.cathedrale-amiens.images-en-somme.fr/</a><br/><br/>
+
+				Site UNESCO :<br/>
+				<a href="http://whc.unesco.org/fr/list/162/">http://whc.unesco.org/fr/list/162/</a><br/><br/>
+
+				Site Wikipedia :<br/>
+				<a href="http://fr.wikipedia.org/wiki/Cathédrale_Notre-Dame_d'Amiens">http://fr.wikipedia.org/wiki/Cathédrale_Notre-Dame_d'Amiens</a><br/><br/>
+
+				Site Mapping gothic France :<br/>
+				<a href="http://mappinggothic.org/building/1063">http://mappinggothic.org/building/1063/<a><br/><br/>
+
+				Site Amiens Cathedral Project : <br/>
+				<a href="http://www.learn.columbia.edu/Mcahweb/index-frame.html">http://www.learn.columbia.edu/Mcahweb/index-frame.html</a><br/><br/>
+			
+				Site sur la cathédrale d'Amiens et en particulier sur sa flèche :<br/>
+				<a href="http://cathedrale.gothique.free.fr/Cathedrale_Amiens_3.htm">http://cathedrale.gothique.free.fr/Cathedrale_Amiens_3.htm</a><br/><br/>
+				
+			</p>
 		</div>
 		<div id="partenairesInfos" class='openningInterface'>
 			<h1><mark>N</mark>os <mark>P</mark>artenaires </h1>
-			<ul id='partenairesList'>
-				<li class="partenairesListElement">
-					<img src="data/img/logo/mis.png">
-					<h3>MIS</h3>
-					<p>Modélisation, Informartion etSsystèmes</p>
-				</li>
-				<li class="partenairesListElement">
-					<img src="data/img/logo/mis.png">
-					<h3>MIS</h3>
-					<p>Modélisation, Informartion etSsystèmes</p>
-				</li>
-				<li class="partenairesListElement">
-					<img src="data/img/logo/mis.png">
-					<h3>MIS</h3>
-					<p>Modélisation, Informartion etSsystèmes</p>
-				</li>
-				<li class="partenairesListElement">
-					<img src="data/img/logo/mis.png">
-					<h3>MIS</h3>
-					<p>Modélisation, Informartion etSsystèmes</p>
-				</li>
-				<li class="partenairesListElement">
-					<img src="data/img/logo/mis.png">
-					<h3>MIS</h3>
-					<p>Modélisation, Informartion etSsystèmes</p>
-				</li>
-				<li class="partenairesListElement">
-					<img src="data/img/logo/mis.png">
-					<h3>MIS</h3>
-					<p>Modélisation, Informartion etSsystèmes</p>
-				</li>
-			</ul>
+			<div id = "partenairesToBeScroll">
+				<ul id='partenairesList'>
+					<li class="partenairesListElement">
+						<img src="data/img/logo/mis.png">
+						<h3><a href="https://www.mis.u-picardie.fr">MIS</a></h3>
+						<p><a href="https://www.mis.u-picardie.fr">Modélisation, Information et Systèmes</a></p>
+
+					</li>
+					<li class="partenairesListElement">
+						<img src="data/img/logo/amiensMetropole.png">
+						<h3>Amiens Métropole</h3>
+						<p></p>
+					</li>
+					<li class="partenairesListElement">
+						<img src="data/img/logo/dracPicardie.jpg">
+						<h3>DRAC Picardie</h3>
+						<p>Direction régionale des Affaires Culturelles de Picardie</p>
+					</li>
+					<li class="partenairesListElement">
+						<img src="data/img/logo/esad.png">
+						<h3>ESAD Amiens</h3>
+						<p>Ecole Supérieure d'Art et de Design d'Amiens</p>
+					</li>
+					<li class="partenairesListElement">
+						<img src="data/img/logo/ensg.png">
+						<h3>ENSG</h3>
+						<p>Ecole Nationale des Sciences Géographique</p>
+					</li>
+					<li class="partenairesListElement">
+						<img src="data/img/logo/ign.jpg">
+						<h3>IGN</h3>
+						<p>Institut National de l'Information Géographique et Forestière</p>
+					</li>
+				</ul>
+			</div>
+		</div>
+		<div id="hoverScrollZones">
+			<div id="projetHoverScrollUp"></div>
+			<div id="projetHoverScrollDown"></div>
+			<div id="projetHoverScrollLeft"></div>
+			<div id="projetHoverScrollRight"></div>
 		</div>
 
 		<div id ="leftPanel">
