Add name on hoverParts

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 			<div id="projetHoverScrollLeft"></div>
 			<div id="projetHoverScrollRight"></div>
 		</div>
-
+		<div id="hoverPartNameContainer"></div>
 		<div id ="leftPanel">
 			<!-- Javascript is creating title and description of the hover interest point here -->
 		</div>
