working on string modifier
Think we need to create a document.creatElemeent("mark") put the letter
adding the text and do it again until the end of the string ...

--- a/index.html
+++ b/index.html
@@ -161,35 +161,37 @@
 		</div>
 		<div id="equipeInfos" class='openningInterface'>
 			<h1><mark>N</mark>ous <mark>C</mark>ontacter </h1>
-			<p>
-				Site web dédié à la cathédrale d'Amiens développé par l'UPJV : <br/>
-				<a href="http://www.u-picardie.fr/Cathedrale/visite.html">http://www.u-picardie.fr/Cathedrale/visite.html</a><br/><br/>
+			<div id="contactToBeScroll">
+				<p>
+					Site web dédié à la cathédrale d'Amiens développé par l'UPJV : <br/>
+					<a href="http://www.u-picardie.fr/Cathedrale/visite.html">http://www.u-picardie.fr/Cathedrale/visite.html</a><br/><br/>
 
-				Amiens Métropole :<br/>
-				<a href="http://www.amiens-cathedrale.fr/home.html">http://www.amiens-cathedrale.fr/home.html</a><br/><br/>
+					Amiens Métropole :<br/>
+					<a href="http://www.amiens-cathedrale.fr/home.html">http://www.amiens-cathedrale.fr/home.html</a><br/><br/>
 
-				Site Centre des Monuments Nationaux :<br/>
-				<a href="http://cathedrale-amiens.monuments-nationaux.fr/">http://cathedrale-amiens.monuments-nationaux.fr/</a><br/><br/>
-				
-				Site Pascal Lando :<br/>
-				<a href="http://www.cathedrale-amiens.images-en-somme.fr/">http://www.cathedrale-amiens.images-en-somme.fr/</a><br/><br/>
+					Site Centre des Monuments Nationaux :<br/>
+					<a href="http://cathedrale-amiens.monuments-nationaux.fr/">http://cathedrale-amiens.monuments-nationaux.fr/</a><br/><br/>
 
-				Site UNESCO :<br/>
-				<a href="http://whc.unesco.org/fr/list/162/">http://whc.unesco.org/fr/list/162/</a><br/><br/>
+					Site Pascal Lando :<br/>
+					<a href="http://www.cathedrale-amiens.images-en-somme.fr/">http://www.cathedrale-amiens.images-en-somme.fr/</a><br/><br/>
 
-				Site Wikipedia :<br/>
-				<a href="http://fr.wikipedia.org/wiki/Cathédrale_Notre-Dame_d'Amiens">http://fr.wikipedia.org/wiki/Cathédrale_Notre-Dame_d'Amiens</a><br/><br/>
+					Site UNESCO :<br/>
+					<a href="http://whc.unesco.org/fr/list/162/">http://whc.unesco.org/fr/list/162/</a><br/><br/>
 
-				Site Mapping gothic France :<br/>
-				<a href="http://mappinggothic.org/building/1063">http://mappinggothic.org/building/1063/<a><br/><br/>
+					Site Wikipedia :<br/>
+					<a href="http://fr.wikipedia.org/wiki/Cathédrale_Notre-Dame_d'Amiens">http://fr.wikipedia.org/wiki/Cathédrale_Notre-Dame_d'Amiens</a><br/><br/>
 
-				Site Amiens Cathedral Project : <br/>
-				<a href="http://www.learn.columbia.edu/Mcahweb/index-frame.html">http://www.learn.columbia.edu/Mcahweb/index-frame.html</a><br/><br/>
-			
-				Site sur la cathédrale d'Amiens et en particulier sur sa flèche :<br/>
-				<a href="http://cathedrale.gothique.free.fr/Cathedrale_Amiens_3.htm">http://cathedrale.gothique.free.fr/Cathedrale_Amiens_3.htm</a><br/><br/>
-				
-			</p>
+					Site Mapping gothic France :<br/>
+					<a href="http://mappinggothic.org/building/1063">http://mappinggothic.org/building/1063/<a><br/><br/>
+
+					Site Amiens Cathedral Project : <br/>
+					<a href="http://www.learn.columbia.edu/Mcahweb/index-frame.html">http://www.learn.columbia.edu/Mcahweb/index-frame.html</a><br/><br/>
+
+					Site sur la cathédrale d'Amiens et en particulier sur sa flèche :<br/>
+					<a href="http://cathedrale.gothique.free.fr/Cathedrale_Amiens_3.htm">http://cathedrale.gothique.free.fr/Cathedrale_Amiens_3.htm</a><br/><br/>
+
+				</p>
+			</div>
 		</div>
 		<div id="partenairesInfos" class='openningInterface'>
 			<h1><mark>N</mark>os <mark>P</mark>artenaires </h1>
@@ -237,6 +239,7 @@
 		</div>
 		<div id="hoverPartNameContainer"></div>
 		<div id ="leftPanel">
+			<img id="playPauseAudioGuide" src="data/img/picto/close.png"></img>
 			<!-- Javascript is creating title and description of the hover interest point here -->
 		</div>
        	<script type="text/javascript" src="js/application.js"></script>
